skaffold/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: backend
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - name: web
          containerPort: 8080
        livenessProbe:
          httpGet:
            port: 8080
            path: /
          initialDelaySeconds: 1
          periodSeconds: 10
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            port: 8080
            path: /health
          initialDelaySeconds: 10
          periodSeconds: 5
