skaffold/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: app
  ports:
  - port: 8080
    targetPort: web
  type: NodePort
