skaffold/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: api.backend
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            serviceName: app
            servicePort: 8080
